package utils;

public enum Parameters
{
    timeLimit,
    maxProcessingTime,
    minProcessingTime,
    maxArrivalTime,
    minArrivalTime,
    numberOfServers,
    numberOfClients,
    maxNbOfClientsPerQueue
}
