package utils;

public enum Status
{
    ON,
    OFF
}
